2008-01-29  Didier Verna  <didier@xemacs.org>

	* lisp/bbdb-com.el (bbdb-collect-all-aliases): Fix infite loop due
	to misplaced iteration. This occurred when triggering the warning.

2007-12-05  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb-com.el (bbdb-dwim-net-address-title-field): New field
	controlling if a title is prepended to an email address.  The
	default value is 'title.

2007-11-26  Leo  <sdl.web@gmail.com>

	* lisp/bbdb-com.el (bbdb-get-addresses): Minor cleanup and fix an
	bug (unquoted leading "(")in a doc string.

2007-11-26  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb.el (bbdb-annotate-message-sender): Normalize and unify
	names before comparing them to avoid detecting a name change where
	none is.

2007-11-02  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb.el (bbdb-prin1): Added BBDB version of prin1 and
	prin1-to-string binding print-level and print-length to nil to
	avoid abbreviation when writing records.

2007-09-18  Jim Blandy  <jimb@codesourcery.com>

	* texinfo/bbdb.texinfo (bbdb-always-add-addresses): Document new
	meanings of 'ask', nil, and function symbols.

	* texinfo/bbdb.texinfo (Manual Record Addition): Use @pxref, not
	@xref.

2007-07-03  Robert Widhopf-Fenk  <fenk@forwiss.de>

	* lisp/bbdb-gnus.el (bbdb/gnus-summary-get-author): Added handling
	of `gnus-ignored-from-addresses' and `gnus-summary-to-prefix'.

2007-05-12  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb-com.el (bbdb-define-all-aliases): Rewrite to handle
	magic aliases which expand to all nets of a records when ending in
	"*", pick the nth net of a records when ending in "[NTH]" and
	recursively expanding aliases if a net has no "@" and exists as
	alias.

2007-03-04  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb.el (bbdb-pop-up-bbdb-buffer): Rewrote the function to
	use PREDICATE regardless of the split mode selected by
	`bbdb-use-pop-up'.

	`bbdb-use-pop-up' can be used to select the split mode.
